Fix double CORS header and cookie SameSite=None for cross-origin